--- a/config/config-file-dev.yml
+++ b/config/config-file-dev.yml
@@ -1,3 +1,5 @@
-config:
-  name: config-dev
-  id: config-dev-001
+data:
+  env: config-eureka-dev
+  user:
+    username: eureka-client-user
+    password: 1291029102
